--- a/package.json
+++ b/package.json
@@ -9,20 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-spring/three": "^9.7.5",
-    "@react-three/drei": "^10.0.6",
-    "@react-three/fiber": "^9.1.2",
-    "@react-three/postprocessing": "^3.0.4",
     "framer-motion": "^12.7.3",
     "gray-matter": "^4.0.3",
     "gsap": "^3.13.0",
-    "lucide-react": "^0.506.0",
     "next": "15.3.0",
     "next-mdx-remote": "^5.0.0",
-    "postprocessing": "^6.37.2",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "three": "^0.175.0"
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
